--- a/src/components/Achievements/styles.less
+++ b/src/components/Achievements/styles.less
@@ -91,7 +91,9 @@
 }
 
 @media screen and (max-width: 1279px) {
-  .achievements { padding: 0 68px; }
+  .achievements {
+    padding: 0 68px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -103,5 +105,14 @@
       font-size: 25px;
       line-height: 31px;
     }
+  }
+
+  .line {
+    display: none;
+  }
+
+  .logos {
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
