--- a/src/components/Header/styles.less
+++ b/src/components/Header/styles.less
@@ -65,4 +65,12 @@
 
 @media screen and (max-width: 767px) {
   .header-content { padding: 20px 16px; }
+  .navigation {
+    .lng-select {
+      margin-right: 20px;
+    }
+    a {
+      margin-right: 20px;
+    }
+  }
 }
